# amplitude-tracker-android

./: AmplitudeTracker.cpp  AmplitudeTracker.h  CMakeLists.txt  Main.qml  Screen1.qml  Screen2.qml  main.cpp
android/: AndroidManifest.xml  build.gradle
android/src/com/emotiv/consumerapp/: MainActivity.java
